lab1/Test/L1-A-13-47.output
Error Type A at Line 2
Error Type B at Line 2
Error Type B at Line 4
Error Type B at Line 7
Error Type B at Line 16
Error Type A at Line 18
Error Type A at Line 20
Error Type A at Line 22
Error Type A at Line 30
Error Type B at Line 31
Error Type B at Line 32
