lab1/Test/L1-A-13-47.cmm
int 
%int mX8ilpHTSUBN ( ) {
  struct {
    int . OlJ ;
    float YW_DKk6Qtsd ;
  }YJwn3 [ 210625783 ] , vKEEPj_xJMXo = oxlmaP 
  return x8iL621GP_ = A9_l9mK97TuJnbT || McVHam && 
    jLkj4zwsFR4wQ63o38O9 >= In9InmYRe4ss - WAHgIZMRMBsXGp 
    / Ed [ Mo6pvSeke1U58lGKVwu = lBrLSiN90zELtKnn != ! 
    - - ! ! ! ByJTH38eZ ( l = KCqK <= SmwJlC * hOEz ( 
    m_ , dQYh2tr2xVo0Ev3 = PG9PxAg3NrT5Xqg < ( - oVHQCXfHQ 
    [ Kj > CsOY ] / - 1465281490.384914116 == - 341618731 
    ) ) . DqyNs + ! ! oyg ( ) ) * ! - ! AjNa ] ;
}
struct dHOGqJ5 w 
;float 
int Og094kV1BMY4 , DNBYg 
&
;
^int ;
struct gfe4LWY6rt_B {
}#;
int J4Fw9xakKb ( int DA ) {
}
int EJV_DEpuEZ ( int f3r82CfvSqpz5Y , int nSAFVeZpQurtskwsziy8 
  ) {
}
int ;
int ;
int OlnnrZENLAdX3cTg ( ) \{
  if hxfPm )   cpxOKs2XTBOlAjh ;
else   if ( Id8 )   if ( HVFQjmk )   qhZXk2 else ;
else   while ( hqQKmFVtrqca9p ) {
    Xbffakc7ycw0UuaEkS8x ;
  }



}
